--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>jedis-ext</groupId>
+	<groupId>com.github.variflight</groupId>
 	<artifactId>jedis-ext</artifactId>
-	<version>2.9</version>
+	<version>2.9.0</version>
 	<packaging>jar</packaging>
 
 	<name>jedis-ext</name>
