--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jedis-ext</name>
+	<name>feeyo-redisclient-ext</name>
 	<comment></comment>
 	<projects>
 	</projects>
